@@ -1,3 +1,7 @@
+2002-08-10  Sebastian Rittau  <srittau@jroger.in-berlin.de>
+
+	* autogen.sh: support for configure.ac
+
 2002-05-10  Chema Celorio  <chema@celorio.com>
 
 	* compiler-flags.m4: fix GNOME_COMPILE_WARNINGS to work when a parameter is
